[gd_scene load_steps=11 format=3 uid="uid://bt7knoovenvbk"]

[ext_resource type="Script" uid="uid://c8ier7k2ohfsp" path="res://addons/abyss_history_lib/Class/Interact/InteractiveClass.gd" id="1_1eg30"]
[ext_resource type="Script" uid="uid://chgmi26fjwqth" path="res://Resources/Object/Function/Pickable/PickableThingsInfo.gd" id="1_4u8fc"]
[ext_resource type="Material" uid="uid://b70uhgp32byqb" path="res://Resources/Object/Function/Pickable/DefaultMaterial.tres" id="2_ga5f3"]
[ext_resource type="Script" uid="uid://xi806lb1q3l3" path="res://addons/abyss_history_lib/Class/Interact/Behaviour/_BehaviorClass.gd" id="2_r1chq"]
[ext_resource type="Script" uid="uid://c151vg7t876tl" path="res://addons/abyss_history_lib/Class/Interact/Behaviour/DoInteractBehaviorClass.gd" id="3_hrhc0"]
[ext_resource type="Shader" uid="uid://737w2aaa0vkx" path="res://Resources/Shader/outline.gdshader" id="4_2v5m8"]
[ext_resource type="ArrayMesh" uid="uid://kxchelosyedc" path="res://Resources/Object/Function/Pickable/missing.obj" id="5_3ku75"]

[sub_resource type="Resource" id="Resource_ork06"]
script = ExtResource("3_hrhc0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6v25"]
render_priority = 0
shader = ExtResource("4_2v5m8")
shader_parameter/active = true
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_width = 5.0

[sub_resource type="BoxShape3D" id="BoxShape3D_ao11c"]
size = Vector3(0.5, 0.5, 0.5)

[node name="PickableScene" type="Node3D"]
script = ExtResource("1_1eg30")
DisplayName = "Item"
Interactable = true
interact_text = "interact.pickup"
current_health = 100.0
touch_behavior = Array[ExtResource("2_r1chq")]([SubResource("Resource_ork06")])

[node name="Body" type="RigidBody3D" parent="."]
collision_layer = 16
collision_mask = 11
script = ExtResource("1_4u8fc")

[node name="PickableArea" type="Area3D" parent="Body"]
collision_layer = 16
collision_mask = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/PickableArea"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
material_override = ExtResource("2_ga5f3")
material_overlay = SubResource("ShaderMaterial_g6v25")
mesh = ExtResource("5_3ku75")

[node name="CollisionShape" type="CollisionShape3D" parent="Body/PickableArea"]
shape = SubResource("BoxShape3D_ao11c")

[node name="CollisionShape" type="CollisionShape3D" parent="Body"]
shape = SubResource("BoxShape3D_ao11c")

[connection signal="init_behavior_signal" from="." to="Body" method="model_setter"]
[connection signal="body_entered" from="Body/PickableArea" to="Body" method="_on_pickable_area_body_entered"]
